--- a/main.gradle
+++ b/main.gradle
@@ -16,9 +16,8 @@ subprojects {
     compileJava.dependsOn validateStructure
 
     java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(25)
-        }
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     //build.dependsOn 'pitest'
