--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+	testImplementation 'com.tngtech.archunit:archunit:1.4.0'
 	implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
-	implementation project(':dynamo-db')
+	implementation project(':mongo-db')
 	implementation project(':metrics')
 	implementation project(':reactive-web')
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation 'com.tngtech.archunit:archunit:1.4.1'
-    testImplementation 'tools.jackson.core:jackson-databind'
 }
 
 tasks.register('explodedJar', Copy) {
