--- a/infrastructure/driven-adapters/mongo-db/build.gradle
+++ b/infrastructure/driven-adapters/mongo-db/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':model')
     implementation 'org.springframework:spring-context'
-    implementation 'software.amazon.awssdk:dynamodb-enhanced'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
-    testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2'
 }
