--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 pluginManagement {
     repositories {
-        //mavenLocal()
         gradlePluginPortal()
     }
 }
@@ -23,5 +22,5 @@ include ':reactive-web'
 project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
 include ':metrics'
 project(':metrics').projectDir = file('./infrastructure/helpers/metrics')
-include ':dynamo-db'
-project(':dynamo-db').projectDir = file('./infrastructure/driven-adapters/dynamo-db')
+include ':mongo-db'
+project(':mongo-db').projectDir = file('./infrastructure/driven-adapters/mongo-db')
