--- a/main.gradle
+++ b/main.gradle
@@ -54,7 +54,7 @@ subprojects {
     test.finalizedBy(project.tasks.jacocoTestReport)
 
     pitest {
-        targetClasses = ['co.com.bancolombia.*']
+        targetClasses = ['co.com.pragma.*']
         excludedClasses = []
         excludedTestClasses = []
         pitestVersion = '1.22.0'
