--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ package=co.com.pragma
 systemProp.version=4.1.0
 reactive=true
 lombok=true
-metrics=true
+metrics=false
 language=java
 org.gradle.parallel=true
 org.gradle.caching=true
