--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -5,12 +5,12 @@ dependencies {
 	testImplementation 'com.tngtech.archunit:archunit:1.4.0'
 	implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 	implementation project(':mongo-db')
-	implementation project(':metrics')
 	implementation project(':reactive-web')
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation 'com.tngtech.archunit:archunit:1.4.1'
 }
