--- a/infrastructure/driven-adapters/mongo-db/build.gradle
+++ b/infrastructure/driven-adapters/mongo-db/build.gradle
@@ -3,5 +3,7 @@ dependencies {
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
+    implementation 'io.github.resilience4j:resilience4j-reactor:2.1.0'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2'
 }
